--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <div class="container">
       <div class="col1">
-        <img src="./images/icon-sedans.svg">
+        <img src="./images/icon-sedans.svg" alt="sedans">
         <h2>Sedans</h2>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="col2">
-        <img src="./images/icon-suvs.svg">
+        <img src="./images/icon-suvs.svg" alt="Suvs">
         <h2>SUVs</h2>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect
@@ -52,7 +52,7 @@
         </div>
       </div>
       <div class="col3">
-        <img src="./images/icon-luxury.svg">
+        <img src="./images/icon-luxury.svg" alt="luxury">
         <h2>Luxury</h2>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the
@@ -72,3 +72,4 @@
     </div>
   </body>
 </html>
+
